k8s/policy/verify-image-signiture.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: verify-image-signature

spec:
  validationFailureAction: Enforce
  failurePolicy: Fail
  
  rules:
  - name: verify-image-signature
    match:
      any:
      - resources:
          kinds:
          - Pod
    
    exclude:
      any:
      - resources:
          namespaces:
          - kube-system
          - kube-public
          - kube-node-lease
          - kyverno
    
    verifyImages:
    - imageReferences:
      - "ghcr.io/slsa-lab-green:*"
      
      attestors:
      - entries:
        - keyless:
            url: https://fulcio.sigstore.dev
            issuer: "https://token.actions.githubusercontent.com"
            subject: "repo:slsa-lab-green/application/.*"
            rekor:
              url: https://rekor.sigstore.dev
      
      mutateDigest: true
      required: true
