k8s/policy/verify-sbom.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: verify-sbom

spec:
  validationFailureAction: Enforce
  failurePolicy: Fail
  background: false
  
  rules:
  - name: check-sbom-attestation
    
    match:
      any:
      - resources:
          kinds:
          - Pod
    
    exclude:
      any:
      - resources:
          namespaces:
          - kube-system
          - kube-public
          - kube-node-lease
          - kyverno
    
    verifyImages:
    - imageReferences:
      - "*"
      
      attestations:
      - type: https://cyclonedx.org/bom
        attestors:
        - entries:
          - keyless:
              issuer: "https://token.actions.githubusercontent.com"
              subject: "https://github.com/slsa-lab-green/application/.github/workflows/*"
              rekor:
                url: https://rekor.sigstore.dev
